update auth controllerrs
