# controllers/auth/current.js
@@ -1,10 +1,11 @@
 const { ctrlWrapper } = require("../../decorators");
 
 const current = async (req, res) => {
-  const { name, email, birthday, phone, city, avatarURL, pets, favorite } =
+  const { _id, name, email, birthday, phone, city, avatarURL, pets, favorite } =
     req.user;
 
   res.json({
+    _id,
     name,
     email,
     birthday,
